cluster/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-dev
  labels:
    app: backend-dev
spec:
  ports:
  - name: http-web
    port: 8080
  selector:
    app: backend-dev
